--- a/src/App.less
+++ b/src/App.less
@@ -25,7 +25,6 @@
     background-color: rgba(65, 79, 114, 0.29);
     padding: 10px;
     border: 1px solid white;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,6 +58,8 @@
 }
 .todolist {
   margin-top: 20px;
+  display: flex;
+  flex-direction: column-reverse;
 
 }
 .todo {
@@ -90,6 +91,10 @@
     align-items: center;
     justify-content: center;
     .red{
+      color: #fa0000;
+      font-size: 12px;
+    }
+    .yellow{
       color: #ffe641;
     }
     .green{
