--- a/src/App.less
+++ b/src/App.less
@@ -36,6 +36,14 @@
       border-radius: 8px;
     }
     .form-data {
+      display: flex;
+      max-width: 650px;
+      align-items: center;
+      .form-files{
+        flex: 1 1 auto;
+        display: flex;
+        flex-wrap: wrap;
+      }
       input {
       }
     }
@@ -48,12 +56,21 @@
   }
 }
 .file {
-  display:inline-block;
+  display: inline-flex;
+  align-items: center;
+  max-height: 25px;
   background-color: #3473ff;
   margin: 5px;
+
   a {
-    padding: 10px;
+    border: 1px solid white;
+    padding: 2px;
     color: white;
+  }
+  p{
+    cursor: pointer;
+    padding: 2px;
+    border: 1px solid white;
   }
 }
 .todolist {
