Add delete file function

--- a/src/App.less
+++ b/src/App.less
@@ -42,7 +42,7 @@
       .form-files{
         flex: 1 1 auto;
         display: flex;
-        flex-wrap: wrap;
+        align-items: center;
       }
       input {
       }
